# ocean-gestalt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  camera.h  debug.entitlements  web_build.sh
config/: config.json  output.json  wave.json
data/: config.json
data/config/: environment.json  generator.json  shader.json
data/shader/: gerstner.vert  gerstner_normal.gs  shader.frag
data/shader/webgl/: gerstner.vert  shader.frag  shader.vert  simple.frag
shader/: gerstner.vert  gerstner_normal.gs  normal.gs  normal.vs  shader.frag  shader.vert  shader2.frag  shader2.vert  simple.frag  simple.vert  wireframe.fs  wireframe.gs  wireframe.vs
shader/webgl/: shader.frag  shader.vert
src/: Application.cpp  Application.hpp  Camera.cpp  Camera.hpp  Configuration.cpp  Configuration.hpp  Debug.cpp  Debug.hpp  DebugMatrix.hpp  InputProcessor.hpp  KeyExecutable.cpp  KeyExecutable.hpp  Light.cpp  Light.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Moveable.cpp  Moveable.hpp  MyApplication.cpp  MyApplication.hpp  Ocean.cpp  Ocean.hpp  OceanGestalt.cpp  OceanGestalt.hpp  Serialization.cpp  Serialization.hpp  Shader.cpp  Shader.hpp  Uniforms.hpp  Vertex.hpp  Wave.cpp  Wave.hpp  WaveGenerator.cpp  WaveGenerator.hpp  WaveUI.cpp  WaveUI.hpp  asset.hpp.in  camera.h  (+6 more)
